[NguyenDanHuy_22.05.2025] feat: add department management APIs with CRUD operations and integrate into the application
