# src/modules/service/service.route.ts
@@ -18,7 +18,6 @@ export default class ServiceRoute implements IRoute {
     }
 
     private initializeRoutes() {
-
         // POST: domain:/api/service/create -> Create service
         this.router.post(
             API_PATH.CREATE_SERVICE,
@@ -31,6 +30,20 @@ export default class ServiceRoute implements IRoute {
             API_PATH.SEARCH_SERVICE,
             authMiddleWare([], true),
             this.serviceController.getServices);
+
+        // GET: domain:/api/service/statistics -> Đếm số lượng dịch vụ theo loại
+        this.router.get(
+            `${this.path}/statistics`,
+            authMiddleWare([UserRoleEnum.ADMIN, UserRoleEnum.MANAGER]),
+            this.serviceController.countServicesByType
+        );
+
+        // GET: domain:/api/service/appointments -> Lấy các dịch vụ dựa trên thông tin cuộc hẹn
+        this.router.get(
+            `${this.path}/appointments`,
+            authMiddleWare([UserRoleEnum.ADMIN, UserRoleEnum.MANAGER, UserRoleEnum.STAFF]),
+            this.serviceController.getServicesByAppointment
+        );
 
         // GET: domain:/api/service/:id -> Get service by id
         this.router.get(
@@ -45,18 +58,16 @@ export default class ServiceRoute implements IRoute {
             validationMiddleware(UpdateServiceDto),
             this.serviceController.updateService);
 
+        // PATCH: domain:/api/service/:id/status -> Thay đổi trạng thái hoạt động của dịch vụ
+        this.router.patch(
+            `${this.path}/:id/status`,
+            authMiddleWare([UserRoleEnum.ADMIN, UserRoleEnum.MANAGER]),
+            this.serviceController.changeServiceStatus);
+
         // DELETE: domain:/api/service/:id -> Delete service by id
         this.router.delete(
             API_PATH.DELETE_SERVICE,
             authMiddleWare([UserRoleEnum.ADMIN, UserRoleEnum.MANAGER]),
             this.serviceController.deleteService);
-
-        // GET: domain:/api/service/appointments -> Lấy các dịch vụ dựa trên thông tin cuộc hẹn
-        this.router.get(
-            `${this.path}/appointments`,
-            authMiddleWare([], true),
-            this.serviceController.getServicesByAppointment
-        );
-
     }
 }
